[package]
name = "spdted"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"
nom = "7.1.3"
thiserror = "1.0.40"

[dev-dependencies]
anyhow = "1.0.72"
criterion = "0.5.1"

[[bench]]
name = "parse_dted"
harness = false

[profile.bench]
debug = true
