[package]
name = "spdted"
version = "0.1.0"
edition = "2021"


[dependencies]
ndarray = "0.15.6"
nom = "7.1.3"
rayon = "1.7.0"
thiserror = "1.0.40"

[dev-dependencies]
anyhow = "1.0.72"
criterion = "0.5.1"
iai = { git = "https://github.com/sigaloid/iai", rev = "6c83e942" }

[[bench]]
name = "parse_dted"
harness = false

[profile.bench]
debug = true
